Fix biography page dt width on iPhone vertical

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -32,8 +32,8 @@
     .mj-biography-list {
       font-size: 15px;
 
-      dt { width: 5em; }
-      dd { margin-left: 6em; }
+      dt { width: 5.5em; }
+      dd { margin-left: 6.5em; }
     }
   }
 }
